# voxel

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  example_plan.yaml  notes.md  pyproject.toml  ruff.toml  utils.py
bench/: .gitignore  README.md  __init__.py  config.py  data.py  harness.py  numba_threading_layer.py  pyproject.toml  read_real_data.py  s3_put_bandwidth.py  s3_write_ceiling.py  sync.py  validate_gaussian.py  write_real_data.py
bench/downsample/: __init__.py  analysis.py  constants.py  loaders.py  run.py
bench/storage/: __init__.py  constants.py  loaders.py  transfer_speed.py
bench/write/: __init__.py  constants.py  loaders.py  report.py  run.py  sweep.py
drivers/: README.md  pyproject.toml
drivers/scripts/voicecoil/: repl.py  voicecoil.py
drivers/src/voxel_drivers/aotf/: __init__.py  mpds.py  simulated.py
drivers/src/voxel_drivers/axes/: asi.py  simulated.py  stage.py
drivers/src/voxel_drivers/cameras/: egrabber.py  pco.py  ximea.py
drivers/src/voxel_drivers/daqs/: ni.py  simulated.py
drivers/src/voxel_drivers/lasers/: __init__.py  cobolt_skyra.py  oxxius.py  simulated.py  (+1 more)
drivers/src/vxl_drivers/: __init__.py  serial.py
exaspim/: pyproject.toml
exaspim/src/exaspim/: __init__.py  cli.py
microscopes/exaspim-control/: README.md  pyproject.toml
microscopes/exaspim-control/tests/: test_metadata_launch.py
microscopes/extreme/: pyproject.toml
microscopes/extreme/.voxel/: config.yaml
omezarr/: .gitignore  README.md  pyproject.toml
omezarr/bench/: downsample_bench.py
omezarr/examples/: basic_write.py  ng_viewer_fastapi.py  ng_viewer_httpd.py  s3_backend_example.py  test_multiwriter.py
omezarr/scripts/: cleanup_shm.py  numba_threading_layer.py
omezarr/src/ome_zarr_writer/: __init__.py  buffer.py  config.py  dataset.py  ng_view.py  pyramid.py  s3_utils.py  slot.py  storage.py  transfer.py  types.py  writer.py  writer2.py
omezarr/tests/: conftest.py  test_async_flush.py  test_gaussian_oracle.py  test_pyramid.py  test_s3.py  test_slot.py  test_storage.py
omezarr/tests/metadata/: __init__.py  test_invalid.py  test_valid.py
pyrig/: README.md  pyproject.toml
pyrig/examples/: cluster_demo.py
pyrig/examples/imaging/: demo.py  node.py  rig.py  system.yaml
pyrig/examples/simple/: demo.py  devices.py
pyrig/scripts/: network_check.py
pyrig/src/pyrig/: __init__.py  _utils.py  local.py  rig.py
pyrig/tests/: test_collect_functions.py  test_command_validation.py  test_integration.py
pyrig/tests/manual/: distributed.py
python/vidgets/: .gitignore  README.md  pyproject.toml
python/voxel/: README.md  pyproject.toml
python/voxel-classic/: README.md  pyproject.toml
python/voxel/.wheels/: optoKummenberg-1.0.4894-py3-none-any.whl
qt/: README.md  pyproject.toml
qt/playground/: drawer.py  hardware.py  microscope.py  svg_rendering.py
qt/src/voxel_qt/: app.py  cli.py  devices.py  handle.py
qt/src/vxl_qt/: __init__.py  app.py  channels.py  cli.py  grid.py  handle.py  tile.py  waveforms.py
rigup/: README.md  pyproject.toml  rigup_divergence.md
rigup/examples/: cluster_demo.py
rigup/examples/imaging/: demo.py
rigup/examples/simple/: README.md  demo.py  system.yaml
rigup/src/rigup/: __init__.py  build.py  config.py  local.py  protocol.py  rig.py  wire.py
rigup/tests/: __init__.py  _mock.py  conftest.py  test_build.py  test_collect_functions.py  test_config.py  test_daemon.py  test_device_property.py  test_integration.py  test_local_node.py  test_node_logs.py  test_numeric.py  test_protocol.py  test_result_serialization.py  test_rig.py  test_transport.py  test_transport_stream.py
rigup/tests/manual/: distributed.py
spim-drivers/: README.md  pyproject.toml
spim-drivers/scripts/voicecoil/: repl.py
spim-drivers/src/spim_drivers/: __init__.py
spim-qt/: pyproject.toml
spim-qt/playground/: drawer.py  hardware.py  microscope.py  svg_rendering.py  toggle_demo.py
spim-qt/playground/filter_wheel/: client_widget.py
spim-qt/playground/laser/: __init__.py  adapter.py  client_adapter.py  client_widget.py
spim-qt/src/spim_qt/: __init__.py  app.py  cli.py  devices.py  handle.py
spim-rig/: README.md  pyproject.toml
spim-rig/.wheels/: egrabber-24.09.0.5-py2.py3-none-any.whl
spim-rig/example/: app.py  demo.py  generate_cert.py  system.yaml
spim-rig/examples/: README.md  __init__.py  system.yaml
spim-rig/spim-ui/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
spim-rig/src/spim_rig/: __init__.py  app.py  config.py  device.py  frame_task.py  helpers.py  node.py  preview_hub.py  rig.py  session.py  sync.py  tile.py
spim-studio/: README.md  pyproject.toml
spim-studio/examples/: README.md  system.yaml
spim-studio/examples/simulated/: cluster.yaml  distributed.rig.yaml  distributed.yaml  hybrid.rig.yaml  hybrid.yaml  local.rig.yaml  local.yaml
spim-studio/spim-ui/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
spim-studio/src/spim_studio/: __init__.py  app.py  cli.py  service.py  simulated.rig.yaml  system.py
spim-widgets/: pyproject.toml  test_empty_slots.py
spim-widgets/examples/: fw_demo.py  laser_demo.py  multi_device_demo.py
spim-widgets/src/spim_widgets/: README.md  __init__.py  base.py  runner.py
vxl2/: pyproject.toml
vxl2/src/vxl2/: app.py  config.py  metadata.py  microscope.py  profiles.py  session.py  store.py  system.py
vxlib/: pyproject.toml
vxlib/scripts/: check_theme_contrast.py  generate_gradients.py  immutable_state.py
vxlib/src/vxlib/: __init__.py  coalescer.py  color.py  document.py  log.py  poller.py  quantity.py  reactivity.py  signal.py  types.py  utils.py  vec.py
web/: API.md  README.md  pyproject.toml
web/.old/: __init__.py  app.py  msg_queue.py
web/src/vxl_web/: __init__.py  app.py  cli.py  deps.py  live.py  router.py  wire.py
web/ui/: .prettierignore  .prettierrc  DESIGN.md  DEVICE_INVENTORY.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
web/ui/src/: app.css  app.html
web/ui/static/: manifest.json  sw.js
(+2836 files in other folders)
