[project]
name = "vxl"
version = "0.1.0"
description = "Light sheet microscopy configuration, orchestration, and acquisition"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["voxel", "microscopy", "light-sheet", "neuroscience", "rigup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Hardware",
]

dependencies = [
    "rigup",
    "vxlib",
    "msgpack-numpy>=0.4.8",
    "numpy>=2.3.4",
    "ome-zarr-writer",
    "opencv-python-headless>=4.11.0.86",
    "rich>=14.2.0",
    "ruyaml>=0.91.0",
]

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/voxel"
Issues = "https://github.com/AllenNeuralDynamics/voxel/issues"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "rigup",
    "drivers",
    "web",
    "qt",
    "vxlib",
]

[tool.uv.sources]
ome-zarr-writer = { git = "https://github.com/AllenNeuralDynamics/ome-zarr-writer.git" }
rigup = { workspace = true }
vxlib = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
typeCheckingMode = "standard"
ignore = [
    "**/sdk/**",
    "**/vendor/**",
]
