[project]
name = "vxl"
version = "0.1.0"
description = "Light sheet microscopy configuration, orchestration, and acquisition"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["voxel", "microscopy", "light-sheet", "neuroscience", "rigup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Hardware",
]

dependencies = [
    "rigup",
    "vxlib",
    "msgpack-numpy>=0.4.8",
    "numpy>=2.3.4",
    "ome-zarr-writer",
    "opencv-python-headless>=4.11.0.86",
    "psutil>=5.9",
    "pydantic-settings>=2.13.1",
    "rich>=14.2.0",
    "ruyaml>=0.91.0",
    "cloudpathlib[s3]>=0.24.0",
    "python-dotenv>=1.2.2",
]

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/voxel"
Issues = "https://github.com/AllenNeuralDynamics/voxel/issues"

[project.scripts]
vxl-node = "vxl.node:main"
voxel-node = "vxl.node:main"

[project.entry-points."vxl.metadata"]
exaspim = "vxl.metadata.ExaspimMetadata"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "rigup",
    "drivers",
    "web",
    "qt",
    "vxlib",
    "omezarr",
    "bench",
]

[tool.uv.sources]
ome-zarr-writer = { workspace = true }
rigup = { workspace = true }
vxlib = { workspace = true }

[dependency-groups]
dev = [
    "basedpyright>=1.20.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers"
markers = [
    "slow: integration-flavored tests (ZMQ networking, zarr I/O); excluded from pre-push, run in CI",
]

[tool.pyright]
typeCheckingMode = "standard"
ignore = [
    "**/sdk/**",
    "**/vendor/**",
    "**/bench/**/analysis.py",  # marimo notebooks: cells end in a bare expression to display a widget
]
