[project]
name = "vxl-drivers"
version = "0.1.0"
description = "Hardware drivers for Voxel microscopy: cameras, lasers, stages, DAQs"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "vxl",
    "vxlib",
    "numpy>=2.3.4",
    "pyserial>=3.5",
    "nidaqmx>=1.3.0",
    "tigerasi>=0.0.27",
    "aaopto-aotf>=0.0.11",
]

[project.optional-dependencies]
# Optomechanics drivers
opto-icc = ["optoICC"]
opto-kummenberg = ["optoKummenberg"]
# Laser drivers
coherent-laser = ["coherent-lasers"]
obis-laser = ["obis-laser"]
vortran-laser = ["vortran-laser"]
pycobolt-laser = ["pycobolt"]
# Camera drivers
egrabber-camera = ["egrabber"]
ximea-camera = ["ximea-python"]
# pco-camera = ["pco"]
# Note: Hamamatsu DCAM SDK is bundled in vxl_drivers/cameras/dcam/sdk/

[tool.uv.sources]
coherent-lasers = { url = "https://github.com/AllenNeuralDynamics/coherent-lasers/releases/download/v0.1.0/coherent_lasers-0.1.0-py3-none-any.whl" }
obis-laser = { git = "https://github.com/AllenNeuralDynamics/obis-laser.git" }
vortran-laser = { git = "https://github.com/AllenNeuralDynamics/vortran_laser.git" }
pycobolt = { git = "https://github.com/cobolt-lasers/pycobolt.git" }
egrabber = { url = "https://github.com/waltermwaniki/voxel-wheels/releases/download/v1/egrabber-24.09.0.5-py2.py3-none-any.whl" }
ximea-python = { url = "https://github.com/adamkglaser/ximea-python/releases/download/v4.29.10/ximea_python-4.29.10-py3-none-any.whl" }
optoICC = { url = "https://github.com/waltermwaniki/voxel-wheels/releases/download/v1/optoICC-2.0.4922-py3-none-any.whl" }
optoKummenberg = { url = "https://github.com/waltermwaniki/voxel-wheels/releases/download/v1/optoKummenberg-1.0.4894-py3-none-any.whl" }
vxl = { workspace = true }
vxlib = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
