[project]
name = "exaspim"
version = "0.1.0"
description = "ExASPIM microscope control built on spim-rig"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "spim-rig",
    "spim-drivers",
    # GUI
    "PySide6>=6.8.0",
    "qasync>=0.27.1",
    "qtawesome>=1.4.0",
]

[project.scripts]
exa-spim = "exaspim.cli:main"

[tool.uv.sources]
spim-rig = { workspace = true }
spim-drivers = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "standard"
