[project]
name = "voxel-qt"
version = "0.1.0"
description = "Voxel Qt - PySide6-based microscope control built on voxel"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "voxel",
    "voxel-studio",
    "PySide6>=6.8.0",
    "qasync>=0.27.1",
    "qtawesome>=1.4.0",
]

[project.scripts]
voxel-qt = "voxel_qt.cli:main"

[tool.uv.sources]
voxel = { workspace = true }
voxel-studio = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
