[project]
name = "vxl-qt"
version = "0.1.0"
description = "Voxel - PySide6-based microscope control"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "vxl",
    "PySide6>=6.8.0",
    "qasync>=0.27.1",
    "qtawesome>=1.4.0",
]

[project.scripts]
vxl-qt = "vxl_qt.cli:main"
voxel-qt = "vxl_qt.cli:main"

[tool.uv.sources]
vxl = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
