[project]
name = "rigup"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.0",
    "pyzmq>=27.1.0",
    "ruyaml>=0.91.0",
    "vxlib",
]

[project.scripts]
rigup-node = "rigup.node._runner:standalone_main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
