[project]
name = "spim-drivers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "spim-rig",
    "numpy>=2.3.4",
    "egrabber",
    "nidaqmx>=1.3.0",
    "tigerasi>=0.0.27",
    "aaopto-aotf>=0.0.11",
]

[tool.uv.sources]
egrabber = { path = ".wheels/egrabber-24.09.0.5-py2.py3-none-any.whl" }
spim-rig = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
