[project]
name = "spim-drivers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "spim-rig",
    "numpy>=2.3.4",
    "pyserial>=3.5",
    "nidaqmx>=1.3.0",
    "tigerasi>=0.0.27",
    "aaopto-aotf>=0.0.11",
]

[project.optional-dependencies]
# Laser drivers
coherent-laser = [
    "coherent-lasers @ https://github.com/AllenNeuralDynamics/coherent-lasers/releases/download/v0.1.0/coherent_lasers-0.1.0-py3-none-any.whl",
]
obis-laser = [
    "obis_laser @ git+https://github.com/AllenNeuralDynamics/obis-laser.git",
]
vortran-laser = [
    "vortran_laser @ git+https://github.com/AllenNeuralDynamics/vortran_laser.git",
]
pycobolt-laser = [
    "pycobolt @ git+https://github.com/cobolt-lasers/pycobolt.git",
]
# Camera drivers
egrabber-camera = ["egrabber"]
ximea-camera = [
    "ximea-python @ https://github.com/adamkglaser/ximea-python/releases/download/v4.29.10/ximea_python-4.29.10-py3-none-any.whl",
]
# pco-camera = ["pco"]
# Note: Hamamatsu DCAM SDK is bundled in spim_drivers/cameras/dcam/sdk/

[tool.uv.sources]
egrabber = { url = "https://github.com/waltermwaniki/spim-wheels/releases/download/v1/egrabber-24.09.0.5-py2.py3-none-any.whl" }
spim-rig = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
