[project]
name = "spim-qt"
version = "0.1.0"
description = "SPIM Qt - PySide6-based microscope control built on spim-rig"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "spim-rig",
    "spim-drivers",
    "spim-studio",
    "PySide6>=6.8.0",
    "qasync>=0.27.1",
    "qtawesome>=1.4.0",
]

[project.scripts]
spim-qt = "spim_qt.cli:main"

[tool.uv.sources]
spim-rig = { workspace = true }
spim-drivers = { workspace = true }
spim-studio = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
