[project]
name = "spim-rig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "msgpack-numpy>=0.4.8",
    "numpy>=2.3.4",
    "ome-zarr-writer",
    "opencv-python-headless>=4.11.0.86",
    "egrabber"
]

[project.scripts]
spim-rig = "spim_rig:main"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
ome-zarr-writer = { git = "https://github.com/AllenNeuralDynamics/ome-zarr-writer.git" }
egrabber = { path = ".wheels/egrabber-24.09.0.5-py2.py3-none-any.whl" }
