[project]
name = "spim-rig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyrig",
    "msgpack-numpy>=0.4.8",
    "numpy>=2.3.4",
    "ome-zarr-writer",
    "opencv-python-headless>=4.11.0.86",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "rich>=14.2.0",
]

[project.scripts]
spim-node = "spim_rig.app:node_main"
spim = "spim_rig.app:main"

[tool.uv.sources]
ome-zarr-writer = { git = "https://github.com/AllenNeuralDynamics/ome-zarr-writer.git" }
pyrig = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
