[project]
name = "spim-studio"
version = "0.1.0"
description = "Web interface for SPIM Rig control"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "spim-rig",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[project.scripts]
spim = "spim_studio.cli:main"
spim-node = "spim_rig.node:node_main"

[tool.uv.sources]
spim-rig = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
