[project]
name = "vxl-web"
version = "0.1.0"
description = "Voxel - Web interface for microscope control"
readme = "README.md"
authors = [
    { name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "vxl",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "uvloop; platform_system != 'Windows'",
]

[tool.uv.sources]
vxl = { workspace = true }

[project.scripts]
vxl = "vxl_web.app:main"
voxel = "vxl_web.app:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
