[project]
name = "extreme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Walter Mwaniki", email = "walter.g.mwaniki@gmail.com" }]
requires-python = ">=3.12, <3.13"
dependencies = []

[project.scripts]
extreme = "extreme:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
